--- a/드림코딩JS/index.html
+++ b/드림코딩JS/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="operator.js"></script>
+    <script defer src="async/callback-to-async.js"></script>
   </head>
   <body></body>
 </html>
