--- a/노마드코더 React/index.html
+++ b/노마드코더 React/index.html
@@ -5,122 +5,45 @@
   </body>
   <script
     crossorigin
-    src="https://unpkg.com/react@18/umd/react.production.min.js"
+    src="https://unpkg.com/react@18/umd/react.development.js"
   ></script>
   <script
     crossorigin
     src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
   ></script>
+  <script src="https://unpkg.com/prop-types@15.8.1/prop-types.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById('root');
-    function MinutesToHours() {
-      const [amount, setAmount] = React.useState();
-      const [inverted, setInverted] = React.useState(false);
-      const onChange = (event) => {
-        setAmount(event.target.value);
-      };
-      const reset = () => {
-        setAmount(0);
-      };
-      const onInvert = () => {
-        setInverted((current) => !current);
-        reset();
-      };
+    function Btn({ text, fontSize = 16, onClick }) {
       return (
-        <div>
-          <div>
-            <label htmlFor="minutes">Minutes</label>
-            {/* for는 js에도 있어서 jsx에서 쓰려면 htmlFor */}
-            <input
-              value={inverted ? amount * 60 : amount}
-              id="minutes"
-              placeholder="Minutes"
-              type="number"
-              onChange={onChange}
-              disabled={inverted}
-            />
-          </div>
-          <div>
-            <label htmlFor="hours">Hours</label>
-            <input
-              value={inverted ? amount : Math.round(amount / 60)}
-              id="hours"
-              placeholder="Hours"
-              type="number"
-              onChange={onChange}
-              disabled={!inverted}
-            />
-          </div>
-          <button onClick={reset}>Reset</button>
-          <button onClick={onInvert}>
-            {inverted ? 'Turn back' : 'Invert'}
-          </button>
-        </div>
+        <button
+          onClick={onClick}
+          style={{
+            backgroundColor: 'tomato',
+            color: 'white',
+            padding: '10px 20px',
+            border: 0,
+            borderRadius: 10,
+            fontSize,
+          }}
+        >
+          {text}
+        </button>
       );
     }
-    function KmToMiles() {
-      const [amount, setAmount] = React.useState();
-      const [inverted, setInverted] = React.useState(false);
-      const onChange = (event) => {
-        setAmount(event.target.value);
-      };
-      const reset = () => {
-        setAmount(0);
-      };
-      const onInvert = () => {
-        setInverted((current) => !current);
-        reset();
-      };
-      return (
-        <div>
-          <div>
-            <label htmlFor="km">Kilometers</label>
-            <input
-              value={inverted ? amount * 1.61 : amount}
-              id="km"
-              placeholder="Km"
-              type="number"
-              onChange={onChange}
-              disabled={inverted}
-            />
-          </div>
-          <div>
-            <label htmlFor="miles">Miles</label>
-            <input
-              value={inverted ? amount : amount / 1.61}
-              id="miles"
-              placeholder="Miles"
-              type="number"
-              onChange={onChange}
-              disabled={!inverted}
-            />
-          </div>
-          <button onClick={reset}>Reset</button>
-          <button onClick={onInvert}>
-            {inverted ? 'Turn back' : 'Invert'}
-          </button>
-        </div>
-      );
-    }
+    Btn.propTypes = {
+      text: PropTypes.string.isRequired,
+      fontSize: PropTypes.number,
+    };
     function App() {
-      const [index, setIndex] = React.useState('xx');
-      const onSelect = (event) => {
-        setIndex(event.target.value);
-      };
+      const [value, setValue] = React.useState('Save Changes');
+      const changeValue = () => setValue('Revert Changes');
       return (
         <div>
-          <h1 className="hi">Super Converter</h1>
-          {/* class는 js에도 있어서 jsx에서 쓰려면 className */}
-          <select onChange={onSelect}>
-            <option value="xx">Select your units</option>
-            <option value="0">Minutes & Hours</option>
-            <option value="1">Km & Miles</option>
-          </select>
-          <hr />
-          {index === 'xx' ? 'Please select your units' : null}
-          {index === '0' ? <MinutesToHours /> : null}
-          {index === '1' ? <KmToMiles /> : null}
+          <Btn text={value} onClick={changeValue} />
+          {/* onClick은 eventListener가 아님 그냥 prop임 여기서는 */}
+          <Btn text={'Continue'} />
         </div>
       );
     }
